actualizacion de controladores y documentos de html listar, y modificar entidades autor, libro y editorial.

--- a/src/main/resources/templates/autor_list.html
+++ b/src/main/resources/templates/autor_list.html
@@ -81,7 +81,7 @@
     </div>
 </nav>
 
-<div class="container m-5">
+<div class="container m-auto">
 
     <table class="table table-dark">
         <thead>
