--- a/src/main/resources/templates/editorial_modificar.html
+++ b/src/main/resources/templates/editorial_modificar.html
@@ -2,13 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="ISO-8859-1">
-    <title>Registro de Libros</title>
+    <title>Registro de Autores</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/formulario.css">
 </head>
 <body>
-
 <nav class="navbar navbar-expand-lg navBar">
     <div class="containerImg">
         <a href="/" class="navbar-brand d-flex align-items-center">
@@ -73,61 +72,13 @@
         </ul>
     </div>
 </nav>
-
 <div class="container-fluid m-5 contenedor">
-
-    <form class="formulario" th:action="@{/libro/registro}" method="post">
-
-        <div th:if="${error != null}" class="card text-white bg-danger mb-3 mensajeError">
-            <div class="card-body">
-                <h5 class="card-title">Error 👎</h5>
-                <p class="card-text" th:text="${error}"></p>
-            </div>
-        </div>
-
-        <div th:if="${exito != null}" class="card text-white bg-success mb-3 mt-3 mensajeExito">
-            <div class="card-body">
-                <h5 class="card-title">Exito!</h5>
-                <p class="card-text" th:text="${exito}"></p>
-            </div>
-        </div>
-
+    <form class="formulario" th:action="@{/editorial/modificar}" method="post" >
         <div class="form-group my-3">
-            <label class="mb-2">Cargar Libro</label>
-            <input type="number" class="form-control" name="isbn" placeholder="ISBN">
+            <input hidden th:value="${editorial.id}" name="id">
+            <label class="mb-2">Modificar Editorial</label>
+            <input type="text" class="form-control" th:value="${editorial.nombre}" name="nombre" placeholder="Nombre de Editorial">
         </div>
-        <div class="form-group my-3">
-            <input type="text" class="form-control" name="titulo" placeholder="Titulo del Libro">
-        </div>
-        <div class="form-group my-3">
-            <input type="text" class="form-control" name="imagen" placeholder="Imagen del Libro">
-        </div>
-
-        <div class="form-group my-3">
-            <input type="number" class="form-control" name="ejemplares" placeholder="Cantidad de Ejemplares">
-        </div>
-
-        <div class="form-group my-3">
-
-            <select name="idAutor">
-                <option>Seleccionar Autor</option>
-                <option th:each="autor : ${autores}"
-                        th:value="${autor.id}"
-                        th:text="${autor.nombre}"
-                ></option>
-            </select>
-        </div>
-
-        <div class="form-group my-3">
-            <select name="idEditorial">
-                <option>Seleccionar Editorial</option>
-                <option th:each="editorial : ${editoriales}"
-                        th:value="${editorial.id}"
-                        th:text="${editorial.nombre}"
-                ></option>
-            </select>
-        </div>
-
         <button type="submit" class="btn btn-primary mt-3 botones">Guardar</button>
     </form>
 
@@ -139,7 +90,6 @@
         </div>
     </section>
 </div>
-
 <footer class="text-muted py-5">
     <div class="containerFooter">
         <p class="mb-1">Album example is &copy; Bootstrap,<br>but please download and customize it for yourself!</p>
@@ -150,8 +100,6 @@
         </p>
     </div>
 </footer>
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
