--- a/src/main/resources/templates/panel.html
+++ b/src/main/resources/templates/panel.html
@@ -1,131 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head>
-  <meta charset="utf-8">
-  <title>Biblioteca Egg</title>
-  <link href="css/one-page-wonder.min.css" rel="stylesheet">
-  <!-- CSS only -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/index.css">
-</head>
-
+<head th:replace="~{fragments/head :: head('Biblioteca Egg - Dashboard')}"></head>
 <body>
-<nav class="navbar navbar-expand-lg navBar">
-  <div class="containerImg">
-    <a href="/" class="navbar-brand d-flex align-items-center">
-      <img class="logo" src="/img/Egg.png" alt="Img logo egg">
-    </a>
-  </div>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse elementosNav" id="navbarNavDropdown">
-    <ul class="navbar-nav ms-auto elementos">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-           aria-expanded="false">
-          Libros
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-
-          <li><a class="dropdown-item" th:href="@{/libro/registrar}">Crear Libro</a></li>
-          <li>
-            <hr class="dropdown-divider">
-          </li>
-
-          <li><a class="dropdown-item" th:href="@{/libro/lista}">Listar Libros</a></li>
-        </ul>
-      </li>
-
-
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-           aria-expanded="false">
-          Autores
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-
-          <li><a class="dropdown-item" th:href="@{/autor/registrar}">Crear Autor</a></li>
-          <li>
-            <hr class="dropdown-divider">
-          </li>
-
-          <li><a class="dropdown-item" th:href="@{/autor/lista}">Listar Autores</a></li>
-        </ul>
-      </li>
-
-
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-           aria-expanded="false">
-          Editoriales
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-
-          <li><a class="dropdown-item" th:href="@{/editorial/registrar}">Crear Editorial</a></li>
-          <li>
-            <hr class="dropdown-divider">
-          </li>
-
-          <li><a class="dropdown-item" th:href="@{/editorial/lista}">Listar Editoriales</a></li>
-        </ul>
-      </li>
-
-      <li class="nav-item">
-        <a th:href="@{/registro}" class="nav-link">Registrarse</a>
-      </li>
-
-      <li class="nav-item">
-        <a th:href="@{/login}" class="nav-link">Iniciar Sesión</a>
-      </li>
-
-    </ul>
-  </div>
-</nav>
-
-<div th:if="${exito}!=null" class="card text-white bg-success mb-3 mt-3 mensajeExito">
-  <div class="card-body">
-    <h5 class="card-title">Exito</h5>
-    <p class="card-text" th:text="${exito}"></p>
-  </div>
-</div>
-
-<div th:if="${error}!=null" class="card text-white bg-danger mb-3 mensajeError">
-  <div class="card-body">
-    <h5 class="card-title">Error ðŸ‘Ž</h5>
-    <p class="card-text" th:text="${error}"></p>
-  </div>
-</div>
-
-<header class="header">
-  <section class="contenedorMain">
-    <div class="tituloBiblioteca">
-      <a class="navbar-brand" href="#">BIBLIOTECA EGG</a>
-    </div>
-    <div class="container contenedorLibros">
-      <p class="tituloLibros">Encontrá todos los Libros Aquí!</p>
-    </div>
-    <a class="btn btn-warning" th:href="@{/libro/lista}">Libros</a>
-  </section>
-</header>
-
-<footer class="text-muted py-5">
-  <div class="containerFooter">
-    <p class="mb-1">Album example is &copy; Bootstrap,<br>but please download and customize it for yourself!</p>
-    <p class="mb-0">New to Bootstrap? <a href="/"><br>Visit the homepage</a> or read our <a
-            href="../getting-started/introduction/">getting started guide</a>.</p>
-    <p class="float-end mb-1">
-      <a href="#" style="text-decoration:none"><span>⬆️</span> Back to top</a>
-    </p>
-  </div>
-</footer>
-
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-        crossorigin="anonymous"></script>
-
+<nav th:replace="~{fragments/navbar :: navbar}"></nav>
+<header th:replace="~{fragments/header :: header}"></header>
+<footer th:replace="~{fragments/footer :: footer}"></footer>
+<div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
