--- a/src/main/resources/templates/libro_modificar.html
+++ b/src/main/resources/templates/libro_modificar.html
@@ -31,13 +31,7 @@
         </div>
         <button type="submit" class="btn btn-primary mt-3 botones">Guardar</button>
     </form>
-    <section class=" text-center container">
-        <div class="row mt-3">
-            <div class="divVolver">
-                <a th:href="@{/}" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
-            </div>
-        </div>
-    </section>
+    <section th:replace="~{fragments/return :: return}"></section>
 </div>
 <footer th:replace="~{fragments/footer :: footer}"></footer>
 <div th:replace="~{fragments/scripts :: scripts}"></div>
