--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -16,7 +16,7 @@
     </div>
 </div>
 <div class="container m-5 contenedor">
-    <form class="formulario" th:action="@{/registro}" method="POST">
+    <form class="formulario" th:action="@{/registro}" method="POST" enctype="multipart/form-data">
         <div class="form-group my-3">
             <h3 class="card-title">Registrate!</h3>
         </div>
@@ -33,6 +33,10 @@
         <div class="form-group my-3">
             <input type="password" class="form-control" name="password2" placeholder="REPETIR CONTRASEÑA"
                    th:value="${password2}">
+        </div>
+        <div class="form-group my-3">
+            <input type="file" class="form-control" name="file" placeholder="IMAGEN DE PERFIL"
+                   th:value="${file}">
         </div>
         <button type="submit" class="btn btn-primary mt-3 botones">Registrarme</button>
     </form>
